# LafoIos

./: .gitignore  README.md  lafo-mvp-local-prd.md  lafo-mvp-operations.md  pyproject.toml
.github/workflows/: pages.yml
backend/lafo_backend/: __init__.py  app.py  domain.py  schemas.py  storage.py
backend/tests/: __init__.py  test_api.py  test_domain.py
docs/: index.html  lafo-v1.1-prd.md  medical-disclaimer.html  privacy-policy.html  terms-of-use.html
docs/legal/: app-store-privacy-compliance.md  medical-disclaimer.md  privacy-policy.md
docs/superpowers/plans/: 2026-05-10-lafo-v1.1-implementation.md
ios/: README.md
ios/Lafo.xcodeproj/: project.pbxproj
ios/Lafo.xcodeproj/xcshareddata/xcschemes/: Lafo.xcscheme
ios/LafoApp/: BuddyView.swift  CalendarView.swift  CheckInView.swift  ContentView.swift  HomeView.swift  LafoApp.swift  LafoStore.swift  LafoTheme.swift  Models.swift  MonthlyReviewView.swift  RecordView.swift  SaveSuccessShareSheet.swift  SettingsView.swift  ShareCardView.swift  StatsView.swift
ios/LafoApp/Assets.xcassets/AccentColor.colorset/: Contents.json
lafo_backend/: __init__.py
legal/: terms-of-use.md
superpowers/plans/: 2026-05-10-lafo-local-mvp-implementation.md  2026-05-10-lafo-mvp-implementation.md
superpowers/specs/: 2026-05-10-lafo-design.md
