[project]
name = "lafo"
version = "0.1.0"
description = "Lafo backend and iOS scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "pytest>=9.0.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"
